--- a/Taoh.html
+++ b/Taoh.html
@@ -37,7 +37,302 @@
                 <td><h1><center>Descrición:</center><h1></td>
         </tr>
         <tr>
-                <td><h2>
+                <td><h2>Los caballeros de Taoh son conocidos por ser excesivamente honorables, respetuosos y formales.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Posee un ojo de color azul/celeste y otro de un color rojo. Su pelo es plateado y hermoso.Poseen de 1.80 a 2.15m de altitud y son considerados una raza noble, pero a la vez humilde, debido a que comen muy poco para sobrevivir diariamente, dependiendo del equilibrio universal de las cosas su forma de combate cambia drásticamente.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Su polivalencia y flexibilidad a la hora de combatir los vuelve unos guerreros a tener en cuenta en el campo de batalla, ya que si bien pueden especializarse en algo en específico, siempre podrán dar la mano con aquello que falte.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Estilo: Guerrero/Bardo<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Atributos: Flexible, Elementalista, Agradable y Humilde.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Dificultad: ⭐⭐<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Dificultad de rol: ⭐⭐<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Requisito de prueba: Común<h2></td>
+        </tr>
+        <tr>
+                <td><h1><center>Estadísticas del Caballero Taoh:</center><h1></td>
+        </tr>
+        <tr>
+                <td><h2>+1 Letalidad.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>+2 Agilidad.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>⚖️Equilibrio⚖️: 6 puntos base.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Al iniciar el combate Empieza con 0 puntos.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Regenera 3 puntos de ⚖️Equilibrio⚖️ cada que inicia su turno.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Los 🎯Golpes críticos🎯 aplican 2 de daño por nivel.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>🎯+35% de probabilidad de golpe crítico🎯.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Todos tus ataques poseen ventaja.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>+10’ pies extra.<h2></td>
+
+
+        </tr>
+        <tr>
+                <td><h2>El ⚖️Equilibrio⚖️es la energía base del Caballero de Taoh, con ella el Taoh, posee la capacidad de recrear la magia del bien y del mal a voluntad, no obstante hay cierta magia a la cual podrá tener afinidad siempre y cuando así él la estudie.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Pueden reconocer las intenciones de las personas con mayor facilidad a la normal, +5 a las percepciones de este tipo.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>El Taoh posee 1 estándar y 2 bonus.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Posee un 🗡️Ataque básico🗡️ gratuito que se refresca cada turno.<h2></td>
+
+        </tr>
+        <tr>
+                <td><h2>🥋Disciplina🥋 No consume slot de oficio.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>La DES también se aplica para tus 💪.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>+3 💪.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Posees un instrumento musical que está ligado a tu alma, puedes escoger cualquier instrumento que sirva para generar música, desde Ocarinas, armónicas, flautas, kalimba, incluso tu propio silbido.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>Habilidades:</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>🔥Proyectil Taoh🔥 (E/B)</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>Lanzas un proyectil mágico que inflige 1d4 + CAR + 3 niveles de Runa Fuego/Hielo/Luz/Oscuridad.<h2></td>
+
+        </tr>
+        <tr>
+                <td><h2>Puede utilizarse como ataque a melee con el arma del Taoh. Esto le da ventaja a la hora de atacar/curar.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>60 de alcance. Cuesta 1 de ⚖️Equilibrio⚖️.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>🎻Instrumento Taoh🎻 (E/B/R)</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>(Esta música posee 1d20 + CAR +1 por nivel a la probabilidad de conmover a las personas afectadas.)<h2></td>
+        </tr>
+        <tr>
+                <td><h2>En caso de ser utilizado para tratar de calmar las aguas entre personas o con los miembros de la party posee ventaja.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>🛡️Instrumento defensivo🛡️: (R/G/⚖️)</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>Anulas el poder de conmover a las personas, pero en su lugar ganas un poderoso escudo de 6PG por nivel por cada punto de ⚖️Equilibrio⚖️ consumido. Consume todos tus puntos de ⚖️Equilibrio⚖️.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Cuando inicia tu turno nuevamente, el escudo se deshace.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Puede lanzarse como reacción.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>🗡️Instrumento ofensivo🗡️: (⚖️)</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>Consume 2 de ⚖️Equilibrio⚖️ para potenciar a todos tus aliados a 25’ de ti, todos los aliados a los que hayas afectado, poseen ventaja durante todo su turno. (Este beneficio no se aplica para ti mismo.)<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>🕊️Vuelo rapaz🕊️ (G)</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>El taoh posee la capacidad de volar durante un cortísimo periodo de tiempo, pero a una alta velocidad, esto te da una inercia bastante fuerte a la par de que te permite moverte mucho, como si de un salto de raykonen se tratase.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Vuela 30’ de largo y 50’ de altitud máxima. Añade 3 niveles de inercia. Consume 1 de ⚖️Equilibrio⚖️.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>🌀Esquiva de flujo🌀 (R)</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>Puedes evadir un ataque y moverte 10’ pies sin recibir ataques de oportunidad.<h2></td>
+        </tr>
+        <tr>
+                <td><h1><center>Daños del Taoh</center><h1></td>
+        </tr>
+        <tr>
+                <td><h2>Dado de golpe = 1d6 + 18 por nivel.<h2></td>
+        </tr>
+        <tr>
+                <td><h1><center>Pasivas seleccionables</center><h1></td>
+        </tr>
+        <tr>
+                <td><h2><center>🕊️Despiste del vuelo🕊️:</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>Mejoraste tus habilidades del vuelo rapaz hasta el punto de que ya te parece lo normal de todos los días.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Añade +3 de inercia al utilizar 🕊️Vuelo rapaz🕊️.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>+2PG por nivel.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>⚖️Equilibrio guía⚖️:</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>Incrementa tu religión a la hora de consultarle cosas al equilibrio en 3 + 1 por nivel.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>+2CA<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>⚖️Equilibrio divino⚖️:</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>Cuando utilizas los elementos de Fuego/Oscuridad y Hielo/Luz en distinto orden y finalizar el turno sin perder ese orden, las runas aplicadas se sacrifican para darte el siguiente beneficio:<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Adquieres → ⚖️Equilibrio perfecto⚖️<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>⚖️Equilibrio perfecto⚖️</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>→ +2 🛡️Armadura🛡️ por nivel. (Temporal)<h2></td>
+        </tr>
+        <tr>
+                <td><h2>→ + 1 de CA por nivel. (Temporal)<h2></td>
+        </tr>
+        <tr>
+                <td><h2>→ Te curas 6PG por nivel.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>🧠Calma🧠</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>Adquieres la capacidad de conectarte con el mundo de los espíritus de una forma mucho más excepcional que el resto.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Regeneras un 10% de tus PG máx y regeneras extremidades en el proceso.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>🧠Auto control🧠</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>Cada que inicia la sesión te curas 2 de estrés.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>🔪Letalidad🔪:</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>Puedes sacrificar una bonus para transformar tu siguiente ataque en uno Letal.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>🔪Segador🔪:</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>+1 Letalidad.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>+5’ pies.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>💪Tenaz💪:</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>+1 Tenacidad.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>+2PG por nivel.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>💪🥋Disciplina Taoh🥋💪:</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>+1 de 🛡️Armadura🛡️ por nivel.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>+6💪.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>🎯🔥Daño crítico🔥🎯:<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Tus ataques 🎯críticos🎯 adquieren +2 al daño por nivel.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>🎯Dominio crítico🎯:</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>+25% probabilidad crítica.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>💎Camino de la piedra💎:</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>Desbloquea las runas de la tierra.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>+1 Tenacidad.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Requisito: No tener camino del viento.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>🌬️Camino del viento🌬️:</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>Desbloquea las runas del viento.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>+1 Agilidad.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Requisito: No tener camino de la piedra.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>🛡️Escudero del equilibrio🛡️:</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>Cuando utilizas tu 🎻Instrumento Taoh🎻 de forma defensiva, este escudo puede manifestarse a todos los aliados a 15’ de ti, y los protegerá a todos hasta que sea destruido.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Esta declaración puede ser realizada incluso fuera de tu turno.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Incrementa la potencia del escudo de 🎻Instrumento Taoh🎻 en forma defensiva.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>6 → 9 por nivel.<h2></td>
+        </tr>
+        <tr>
+                <td><h2><center>⚒️Oficio humilde⚒️:</center><h2></td>
+        </tr>
+        <tr>
+                <td><h2>+2 niveles a un oficio a elección.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>+2 al 🎲 de dicho oficio.<h2></td>
         </tr>
         <tr>
     </table>
