--- a/razas.html
+++ b/razas.html
@@ -46,7 +46,7 @@
             <td><h3> Las Amenarys son consideradas maestras de 1 o dos elementos. </td>
         </tr>
         <tr>
-            <td><h1> Brisflow - Cent' Aury <br><img src="Cent’ Aury.png"width="350"></td>
+            <td><h1> Brisflow - Cent' Aury <br><a href="Cent.html"><img src="Cent’ Aury.png"width="350"></td>
             <td><h1> | </td>
             <td><h3> Las Cent' Aury se especializan en lo que es el combate cuerpo a cuerpo, teniendo la forma Aury que son luchadoras y Kalleo que es una asesina. </td>
         </tr>
