--- a/Huntflow.html
+++ b/Huntflow.html
@@ -133,7 +133,11 @@
                 <td><h2><center>🛡️Escudo de Mana🛡️ (B/R)</center><h2></td>
         </tr>
         <tr>
-                <td><h2>Convoca su escudo de Mana. Este escudo de Mana💧 desaparecerá cuando         </tr>
+                <td><h2>Convoca su escudo de Mana.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Este escudo de Mana💧 desaparecerá cuando<h2></td>
+        </tr>
         <tr>
                 <td><h2>vuelva a iniciar su turno.<h2></td>
         </tr>
@@ -162,10 +166,10 @@
                 <td><h2>Consume 25 de maná 💧.<h2></td>
         </tr>
         <tr>
-                <td><h2>Ganas pasivamente (No cuenta como habilidad) Las siguientes pasivas
+                <td><h2><center>Ganas pasivamente (No cuenta como habilidad) Las siguientes pasivas.</center><h2></td>
         </tr>
         <tr>
-                <td><h2>-🎭Divinidad originaria🎭-<h2></td>
+                <td><h2><center>-🎭Divinidad originaria🎭-</center><h2></td>
         </tr>
         <tr>
                 <td><h2>La 🎭Divinidad originaria🎭 se puede utilizar para lanzar de manera completamente gratuita ciertas acciones.<h2></td>
