--- a/Cent.html
+++ b/Cent.html
@@ -64,7 +64,7 @@
                 <td><h2><h2>Requisito de prueba: Común</td>
         </tr>
         <tr>
-                <td><h1><center>Estadísticas de la Huntflow:</center><h1></td>
+                <td><h1><center>Estadísticas de la Cent’ Aury:</center><h1></td>
         </tr>
         <tr>
                 <td><h2>+1 Agilidad.<h2></td>
@@ -73,7 +73,7 @@
                 <td><h2>+2 Tenacidad.<h2></td>
         </tr>
         <tr>
-                <td><h1><center>Habilidades de la Huntflow</center><h1></td>
+                <td><h1><center>Habilidades de la Cent’ Aury</center><h1></td>
         </tr>
         <tr>
                 <td><h1><center>🎠Cabalgata espiritual🎠: (G/R)</center><h1></td>
