--- a/Cent.html
+++ b/Cent.html
@@ -73,10 +73,10 @@
                 <td><h2>+2 Tenacidad.<h2></td>
         </tr>
         <tr>
-                <td><h1><center>Habilidades de la Cent’ Aury</center><h1></td>
+                <td><h1><center>Habilidades de la Cent’ Aury:</center><h1></td>
         </tr>
         <tr>
-                <td><h1><center>🎠Cabalgata espiritual🎠: (G/R)</center><h1></td>
+                <td><h2><center>🎠Cabalgata espiritual🎠: (G/R)</center><h2></td>
         </tr>
         <tr>
                 <td><h2>Al ser usado como Gratuita.<h2></td>
