--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
     </table>
 </center>
 
+<center>
+    <table>
+        <tr>
+            <td>
+                <h1><center>La nueva Campaña | Rhymen wrath<br><a href="Noticia1.html"><img src="Mapeado_2.png" width="800"></a> </center></td>
+        </tr>
+        <tr>
+                <td><h2><br><a href="Noticia1.html">Roleros bienvenidos sean a esta Nueva campaña "Rhymen wrath" donde las mecanicas de combate y la cuota racial ascienden de manera descomunal pero no lo suficiente para compararse a las proximas campañas.</a></td>
+        </tr>
+    </table>
+</center>
+
 <br>
 
 <center>
