--- a/razas.html
+++ b/razas.html
@@ -31,7 +31,7 @@
     <table>
         <tr>
             <td>
-                <h1>Terracolapser<br><a href="Terracolapser.html"><img src="Terracolapser.png" width="200"></a> </td>
+                <h1>Terracolapser<br><a href="Terracolapser.html"><img src="Terracolapser.png" width="200"></a></td>
                 <td><h1> | </td>
                 <td><h2>Raza altamente tecnológica, la cual puede ser el mejor tanque del juego o un ser que maneja el poder del rayo.</td>
         </tr>
@@ -46,7 +46,7 @@
             <td><h3> Las Amenarys son consideradas maestras de 1 o dos elementos. </td>
         </tr>
         <tr>
-            <td><h1> Brisflow - Cent' Aury <br><a href="Cent.html"><img src="Cent’ Aury.png"width="350"></td>
+            <td><h1> Brisflow - Cent' Aury <br><a href="Cent.html"><img src="Cent’ Aury.png"width="350"></a></td>
             <td><h1> | </td>
             <td><h3> Las Cent' Aury se especializan en lo que es el combate cuerpo a cuerpo, teniendo la forma Aury que son luchadoras y Kalleo que es una asesina. </td>
         </tr>
@@ -76,27 +76,27 @@
             <td><h2> Pequeños de estatura pero de basto conocimiento, armados hasta los dientes convocarán un sin fin de guerreros. </td>
         </tr>
         <tr>
-            <td><h1>Merodeador<br><a href="Merodeador.html"><img src="drarios_merodeador.png"width="220"></td>
+            <td><h1>Merodeador<br><a href="Merodeador.html"><img src="drarios_merodeador.png"width="220"></a></td>
             <td><h1> | </td>
             <td><h2> Agil, audaz y sobre todo astuto. El merodeador es un tirador y a la vez un atacante muy distinto. </td>
         </tr>
         <tr>
-            <td><h1>Caballero Taoh<br><a href="Taoh.html"><img src="drarios_taoh.png"width="200"></td>
+            <td><h1>Caballero Taoh<br><a href="Taoh.html"><img src="drarios_taoh.png"width="200"></a></td>
             <td><h1> | </td>
             <td><h2> Caballeroso y de gran humildad, son seres imposibles de odiar. Luchan por el equilibrio universal usando la luz y la oscuridad. </td>
         </tr>
         <tr>
-            <td><h1>Kaotis<br><a href="Kaotis.html"><img src="Kaotis.png" width="200"></td>
+            <td><h1>Kaotis<br><a href="Kaotis.html"><img src="Kaotis.png" width="200"></a></td>
             <td><h1> | </td>
             <td><h2>Seres de poder inmenso, utilizan la energía del caos, la 2da energía más temida de toda la infinita creación debido a su poder acumulativo.</td>
         </tr>
         <tr>
-            <td><h1>Brisflow - Huntflow<br><a href="Huntflow.html"><img src="Huntflow.png" width="200"></td>
+            <td><h1>Brisflow - Huntflow<br><a href="Huntflow.html"><img src="Huntflow.png" width="200"></a></td>
             <td><h1>|</td>
             <td><h2>Cazadoras del bosque brisflow, domadoras y guerreras bastante salvajes</td>
         </tr>
         <tr>
-            <td><h1>White Face<br><img src="White_face.png" width="250"></td>
+            <td><h1>White Face<br><a href="White.html"><img src="White_face.png" width="250"></a></td>
             <td><h1>|</td>
             <td><h2>Los emisarios de la muerte, los ilusionistas que burlaron al mismísimo tiempo y destino. Temidos por su capacidad de hacer que un combate sencillo se vuelva en una lluvia de ilusiones</td>
         </tr>
