--- a/razas.html
+++ b/razas.html
@@ -48,10 +48,10 @@
         <tr>
             <td><h1> Brisflow - Cent' Aury <br><a href="Cent.html"><img src="Cent’ Aury.png"width="350"></a></td>
             <td><h1> | </td>
-            <td><h3> Las Cent' Aury se especializan en lo que es el combate cuerpo a cuerpo, teniendo la forma Aury que son luchadoras y Kalleo que es una asesina. </td>
+            <td><h3> Las Cent' Aury se especializan en lo que es el combate cuerpo a cuerpo, teniendo la forma Aury que son luchadoras y Kalleo que es una asesina.</td>
         </tr>
         <tr>
-            <td><h1> Brisflow - Deva<br><img src="Deva.png"width="190"></td>
+            <td><h1> Brisflow - Deva<br><a href="Deva.html"><img src="Deva.png"width="190"></a></td>
             <td><h1> | </td>
             <td><h2> Las Devas son monjas especializadas en el poder de la luz con grandes habilidades combativas que son muy flexibles. </td>
         </tr>
