--- a/razas.html
+++ b/razas.html
@@ -101,32 +101,32 @@
             <td><h2>Los emisarios de la muerte, los ilusionistas que burlaron al mismísimo tiempo y destino. Temidos por su capacidad de hacer que un combate sencillo se vuelva en una lluvia de ilusiones</td>
         </tr>
         <tr>
-            <td><h1>Zeorz’Mary<a href="Zeors.html"><img src="zeorz.png" width="250"></a></td>
+            <td><h1>Zeorz’Mary<br><a href="Zeors.html"><img src="zeorz.png" width="250"></a></td>
             <td><h1>|</td>
             <td><h2></td>
         </tr>
         <tr>
-            <td><h1>Trikita<img src="White_face.png" width="250"></td>
+            <td><h1>Trikita<br><img src="triki.png" width="250"></td>
             <td><h1>|</td>
             <td><h2></td>
         </tr>
         <tr>
-            <td><h1>Tortuosos de la Sangre<img src="White_face.png" width="250"></td>
+            <td><h1>Tortuosos de la Sangre<br><img src="tortuoso.png" width="250"></td>
             <td><h1>|</td>
             <td><h2></td>
         </tr>
         <tr>
-            <td><h1>Crimsom Rose<img src="White_face.png" width="250"></td>
+            <td><h1>Crimsom Rose<br><img src="Rose.png" width="250"></td>
             <td><h1>|</td>
             <td><h2></td>
         </tr>
         <tr>
-            <td><h1>Syren<img src="White_face.png" width="250"></td>
+            <td><h1>Syren<br><img src="Syren.png" width="250"></td>
             <td><h1>|</td>
             <td><h2></td>
         </tr>
         <tr>
-            <td><h1>Aniquilador<img src="White_face.png" width="250"></td>
+            <td><h1>Aniquilador<br><img src="aniquila.png" width="250"></td>
             <td><h1>|</td>
             <td><h2></td>
         </tr>
