--- a/razas.html
+++ b/razas.html
@@ -33,107 +33,107 @@
             <td>
                 <h1>Terracolapser<br><a href="Terracolapser.html"><img src="Terracolapser.png" width="200"></a></td>
                 <td><h1> | </td>
-                <td><h2>Raza altamente tecnológica, la cual puede ser el mejor tanque del juego o un ser que maneja el poder del rayo.</td>
+                <td><h2>Raza altamente tecnológica, la cual puede ser el mejor tanque del juego o un ser que maneja el poder del rayo.<h2></td>
         </tr>
         <tr>
             <td><h1>Brisflow - Omen<br><img src="Omen.png"width="200"></td>
             <td><h1> | </td>
-            <td><h2>La Brisflow nigromante, puede ser una invocadora (la mas basica del juego) o una poderosa liche. </td>
+            <td><h2>La Brisflow nigromante, puede ser una invocadora (la mas basica del juego) o una poderosa liche.<h2></td>
         </tr>
         <tr>
             <td><h1> Brisflow - Amenarys <br><img src="Amenarys.png"width="200"></td>
             <td><h1> | </td>
-            <td><h3> Las Amenarys son consideradas maestras de 1 o dos elementos. </td>
+            <td><h2>Las Amenarys son consideradas maestras de 1 o dos elementos.<h2></td>
         </tr>
         <tr>
             <td><h1> Brisflow - Cent' Aury <br><a href="Cent.html"><img src="Cent’ Aury.png"width="350"></a></td>
             <td><h1> | </td>
-            <td><h3> Las Cent' Aury se especializan en lo que es el combate cuerpo a cuerpo, teniendo la forma Aury que son luchadoras y Kalleo que es una asesina.</td>
+            <td><h3> Las Cent' Aury se especializan en lo que es el combate cuerpo a cuerpo, teniendo la forma Aury que son luchadoras y Kalleo que es una asesina.<h2></td>
         </tr>
         <tr>
             <td><h1> Brisflow - Deva<br><a href="Deva.html"><img src="Deva.png"width="190"></a></td>
             <td><h1> | </td>
-            <td><h2> Las Devas son monjas especializadas en el poder de la luz con grandes habilidades combativas que son muy flexibles. </td>
+            <td><h2> Las Devas son monjas especializadas en el poder de la luz con grandes habilidades combativas que son muy flexibles.<h2></td>
         </tr>
         <tr>
             <td><h1>Brisflow - Steelcomander<br><img src="Steelcomander.png"width="200"></td>
             <td><h1> | </td>
-            <td><h2>Los famosos héroes de la época del caos. Su valor, destreza y fortaleza los convierten en lideres capaces de lo imposible. </td>
+            <td><h2>Los famosos héroes de la época del caos. Su valor, destreza y fortaleza los convierten en lideres capaces de lo imposible.<h2></td>
         </tr>
         <tr>
             <td><h1>Brisflow - Harpia<br><img src="Harpia.png"width="270"></td>
             <td><h1> | </td>
-            <td><h2>Salvajes pero muy especiales, las harpias adoptan un papel distinto en función de su elemento al nacer. </td>
+            <td><h2>Salvajes pero muy especiales, las harpias adoptan un papel distinto en función de su elemento al nacer.<h2></td>
         </tr>
         <tr>
             <td><h1>Brisflow - Sequita del caos<br><img src="Sequita del caos.png"width="200"></td>
             <td><h1> | </td>
-            <td><h2> Las guías del bosque brisflow y las únicas que tienen acceso legitimo al poder del caos. </td>
+            <td><h2> Las guías del bosque brisflow y las únicas que tienen acceso legitimo al poder del caos.<h2></td>
         </tr>
         <tr>
             <td><h1>Drikar de las Tinieblas<br><img src="Drikar de las Tinieblas.png"width="250"></td>
             <td><h1> | </td>
-            <td><h2> Pequeños de estatura pero de basto conocimiento, armados hasta los dientes convocarán un sin fin de guerreros. </td>
+            <td><h2> Pequeños de estatura pero de basto conocimiento, armados hasta los dientes convocarán un sin fin de guerreros.<h2></td>
         </tr>
         <tr>
             <td><h1>Merodeador<br><a href="Merodeador.html"><img src="drarios_merodeador.png"width="220"></a></td>
             <td><h1> | </td>
-            <td><h2> Agil, audaz y sobre todo astuto. El merodeador es un tirador y a la vez un atacante muy distinto. </td>
+            <td><h2> Agil, audaz y sobre todo astuto. El merodeador es un tirador y a la vez un atacante muy distinto.<h2></td>
         </tr>
         <tr>
             <td><h1>Caballero Taoh<br><a href="Taoh.html"><img src="drarios_taoh.png"width="200"></a></td>
             <td><h1> | </td>
-            <td><h2> Caballeroso y de gran humildad, son seres imposibles de odiar. Luchan por el equilibrio universal usando la luz y la oscuridad. </td>
+            <td><h2> Caballeroso y de gran humildad, son seres imposibles de odiar. Luchan por el equilibrio universal usando la luz y la oscuridad.<h2></td>
         </tr>
         <tr>
             <td><h1>Kaotis<br><a href="Kaotis.html"><img src="Kaotis.png" width="200"></a></td>
             <td><h1> | </td>
-            <td><h2>Seres de poder inmenso, utilizan la energía del caos, la 2da energía más temida de toda la infinita creación debido a su poder acumulativo.</td>
+            <td><h2>Seres de poder inmenso, utilizan la energía del caos, la 2da energía más temida de toda la infinita creación debido a su poder acumulativo.<h2></td>
         </tr>
         <tr>
             <td><h1>Brisflow - Huntflow<br><a href="Huntflow.html"><img src="Huntflow.png" width="200"></a></td>
             <td><h1>|</td>
-            <td><h2>Cazadoras del bosque brisflow, domadoras y guerreras bastante salvajes</td>
+            <td><h2>Cazadoras del bosque brisflow, domadoras y guerreras bastante salvajes<h2></td>
         </tr>
         <tr>
             <td><h1>White Face<br><a href="White.html"><img src="White_face.png" width="250"></a></td>
             <td><h1>|</td>
-            <td><h2>Los emisarios de la muerte, los ilusionistas que burlaron al mismísimo tiempo y destino. Temidos por su capacidad de hacer que un combate sencillo se vuelva en una lluvia de ilusiones</td>
+            <td><h2>Los emisarios de la muerte, los ilusionistas que burlaron al mismísimo tiempo y destino. Temidos por su capacidad de hacer que un combate sencillo se vuelva en una lluvia de ilusiones<h2></td>
         </tr>
         <tr>
             <td><h1>Zeorz’Mary<br><a href="Zeors.html"><img src="zeorz.png" width="250"></a></td>
             <td><h1>|</td>
-            <td><h2></td>
+            <td><h2><h2></td>
         </tr>
         <tr>
             <td><h1>Trikita<br><img src="triki.png" width="250"></td>
             <td><h1>|</td>
-            <td><h2></td>
+            <td><h2><h2></td>
         </tr>
         <tr>
             <td><h1>Tortuosos de la Sangre<br><img src="tortuoso.png" width="250"></td>
             <td><h1>|</td>
-            <td><h2></td>
+            <td><h2><h2></td>
         </tr>
         <tr>
             <td><h1>Crimsom Rose<br><img src="Rose.png" width="250"></td>
             <td><h1>|</td>
-            <td><h2></td>
+            <td><h2><h2></td>
         </tr>
         <tr>
             <td><h1>Syren<br><img src="Syren.png" width="250"></td>
             <td><h1>|</td>
-            <td><h2></td>
+            <td><h2><h2></td>
         </tr>
         <tr>
             <td><h1>Aniquilador<br><img src="aniquila.png" width="250"></td>
             <td><h1>|</td>
-            <td><h2></td>
+            <td><h2><h2></td>
         </tr>
         <tr>
             <td><h1>Murshido<br><img src="Murshido.png"width="250"></td>
             <td><h1> | </td>
-            <td><h2>Criaturas de las profundidades que resurgen para pelear contra todo aquello que se le encuentre, violentos y repletos de fortaleza, estas criaturas asquerosas son inmundas.</td>
+            <td><h2>Criaturas de las profundidades que resurgen para pelear contra todo aquello que se le encuentre, violentos y repletos de fortaleza, estas criaturas asquerosas son inmundas.<h2></td>
         </tr>
     </table>
 </center>
