--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
     <table>
         <tr>
             <td>
-                <h1><center>La nueva Campaña | Rhymen wrath<br><a href="Noticia1.html"><img src="Mapeado_2.png" width="800"></a> </center></td>
+                <h1><center>Reformas y actualizaciones de personajes.<br><a href="Noticia2.html"><img src="Steelcomander.png" width="300"></a> </center></td>
+        </tr>
+        <tr>
+                <td><h2><br><a href="Noticia2.html">En esta nota veran cambios importantes en varias clases.</a>
+        </tr>
+        <tr>
+                <td><h1><center>La nueva Campaña | Rhymen wrath<br><a href="Noticia1.html"><img src="Mapeado_2.png" width="800"></a> </center></td>
         </tr>
         <tr>
                 <td><h2><br><a href="Noticia1.html">Roleros bienvenidos sean a esta Nueva campaña "Rhymen wrath" donde las mecanicas de combate y la cuota racial ascienden de manera descomunal pero no lo suficiente para compararse a las proximas campañas.</a></td>
