--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h1><center>Reformas y actualizaciones de personajes.<br><a href="Noticia2.html"><img src="Steelcomander.png" width="300"></a> </center></td>
         </tr>
         <tr>
-                <td><h2><br><a href="Noticia2.html">En esta nota veran cambios importantes en varias clases.</a>
+                <td><h2><br><a href="Noticia2.html">En esta nota veran cambios importantes en varias clases, lavado de cara total en algunas clases.</a>
         </tr>
         <tr>
                 <td><h1><center>La nueva Campaña | Rhymen wrath<br><a href="Noticia1.html"><img src="Mapeado_2.png" width="800"></a> </center></td>
