--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <td><h1><center>La nueva Campaña | Rhymen wrath<br><a href="Noticia1.html"><img src="Mapeado_2.png" width="800"></a> </center></td>
         </tr>
         <tr>
-                <td><h2><centerZ<br><a href="Noticia1.html">Roleros bienvenidos sean a esta Nueva campaña "Rhymen wrath" donde las mecanicas de combate y la cuota racial ascienden de manera descomunal pero no lo suficiente para compararse a las proximas campañas.</a></center></td>
+                <td><h2><center><br><a href="Noticia1.html">Roleros bienvenidos sean a esta Nueva campaña "Rhymen wrath" donde las mecanicas de combate y la cuota racial ascienden de manera descomunal pero no lo suficiente para compararse a las proximas campañas.</a></center></td>
         </tr>
     </table>
 </center>
